--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,19 @@ services:
       POSTGRES_PASSWORD: password123
       POSTGRES_USER: user123
       POSTGRES_DB: db123
+    ports:
+      - 5432:5432
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
   app:
     image: my-node-app
     ports:
       - 13000:3000
+    depends_on:
+      - db
+      - redis-cache
+  redis-cache:
+    image: redis
+    ports:
+      - 6379:6379
+
