--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "nodemon": "^3.0.1",
-    "pg": "^8.11.2"
+    "pg": "^8.11.2",
+    "redis": "^4.6.7"
   }
 }
